plugins {
    id 'distribution'
    id 'java'
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Repositories providers
repositories {
    mavenCentral()
}

dependencies {
   testImplementation "junit:junit:4.13.1"

   implementation ":ClavaAst"
   implementation ":CommonsLangPlus"
   implementation ":jOptions"
   implementation ":SpecsUtils"

   implementation group: 'com.google.guava', name: 'guava', version: '33.4.0-jre'
}

// Project sources
sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDir 'resources'
        }
    }

    test {
        java {
            srcDir 'test'
        }
        resources {
            srcDir 'test-resources'
        }
    }
}
